--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: uptime
 description: Nakime's mini cli tool.
-version: 0.0.1+4-alpha
+version: 0.0.1+5
 repository: https://github.com/omegaui/uptime
 
 environment:
